--- a/pom.xml
+++ b/pom.xml
@@ -61,4 +61,16 @@
             <version>3.0</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-idea-plugin</artifactId>
+                <version>2.2.1</version>
+                <configuration>
+                    <jdkLevel>1.5</jdkLevel>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
