--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
             <version>3.0</version>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
     <build>
         <plugins>
             <plugin>
